--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Mentos Music",
+    "name": "MAHADEV Music",
     "logo": "https://te.legra.ph/file/24add7d3f42fdf0a909c7.jpg",
     "description": "Music allow you to stream music trought the telegram voice chat feature.",
     "keywords": [
@@ -7,7 +7,7 @@
         "voice chat", 
         "telegram"
     ],
-    "repository": "https://github.com/ToxicCybers/MentosMusic",
+    "repository": "https://github.com/kaal0408/MAHADEVMusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
